added structure for project, unit tests for gameState object

--- a/nodeExamples/package.json
+++ b/nodeExamples/package.json
@@ -13,5 +13,8 @@
     "http": "0.0.0",
     "phaser": "^3.16.2",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "jest": "^24.1.0"
   }
 }
