--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.16.4",
     "http": "0.0.0",
     "phaser": "^3.16.2",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "jest": "^24.1.0"
