--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
     "http": "0.0.0",
+    "mysql": "^2.17.0",
     "phaser": "^3.16.2",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
