--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mmo",
   "version": "1.0.0",
   "description": "flappy bird multiplayer",
-  "main": "index.js",
+  "main": "app.js",
+  "start": "node app.js",
   "scripts": {
-    "start": "node app",
+    "start": "node app.js",
     "test": "jest"
   },
   "repository": {
