--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mysql": "^2.17.0",
     "phaser": "^3.16.2",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "sqlite3": "^4.0.6"
   },
   "devDependencies": {
     "jest": "^24.1.0"
